--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
+  /* font-family: 'Passion One', cursive; */
 }
 
 body {
@@ -19,4 +20,8 @@ a {
 a:hover {
   color: #bbb;
   text-decoration: none;
+}
+
+img {
+  width: 100%;
 }
